se logra ontener id del flujo de un documento, se pasara el proceso a una funcion centralizada
